# particle_simulation

./: .gitignore  CMakeLists.txt  CMakePresets.json  status.txt
shaders/: popcorn.comp  shader.comp  shader.frag
src/: implementation.cpp  main.cpp
src/App/Types/: AppTypes.hpp  Vertex.hpp
src/Core/: DeviceContext.cpp  DeviceContext.hpp  ParticleSimulation.cpp  ParticleSimulation.hpp
src/Core/Buffer/: GpuBuffer.cpp  GpuBuffer.hpp
src/Core/Descriptor/: DescriptorBuilder.hpp  DescriptorWriter.hpp
src/Core/RHI/: DeviceContext.cpp  DeviceContext.hpp  GpuBuffer.cpp  GpuBuffer.hpp
src/Core/RHI/Pipeline/: PipelineBuilder.cpp  PipelineBuilder.hpp  RenderPassBuilder.hpp  ShaderStageBuilder.hpp
src/Core/RHI/Types/: AppTypes.hpp  QueueCriteria.hpp
src/Core/RHI/Window/: GlfwWindowContext.cpp  GlfwWindowContext.hpp  WindowContext.hpp
src/Core/Resources/: Barrier.hpp  Image.cpp  Image.hpp  Texture.cpp  Texture.hpp
